# CMake-Learning

./: .gitignore  CMakeCache.txt  CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  hello_lib.cpp  hello_lib.h
myLib/: Math.cpp  Math.h
playGroundDir/: CMakeLists.txt
src/: CMakeLists.txt  hello_main.cpp
